--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -111,6 +111,10 @@ https://github.com/dece1ver/Sunduk
             "Кнопки с углами в расчете конуса сверла."}));
         Info.Add(new ChangelogInfo(new Version(1, 0, 7, 2), new DateTime(2024, 1, 14), new[] {
             "Коническая резьба по ГОСТ 6211-81", "Резьбы UTS по ANSI / ASME B1.1"}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 8, 0), new DateTime(2025, 8, 7), new[] {
+            "Шаблонник"}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 8, 1), new DateTime(2025, 8, 14), new[] {
+            "Калькулятор в рядом с калькулятором режимов"}));
         Info.Reverse();
     }
 
